<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bookmark"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_more"
        android:title="@string/more_options"
        android:icon="@drawable/ic_more"
        app:showAsAction="always" />
    
    <item
    android:id="@+id/action_tools"
    android:title="Tools"
    android:icon="@drawable/ic_tools"
    app:showAsAction="ifRoom" />
    
</menu>
